merged trunk changes