@@ -6,6 +6,8 @@ package com.tc.test.server.appserver.deployment;
 
 import org.apache.commons.httpclient.HttpClient;
 import org.apache.commons.io.IOUtils;
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
 import org.codehaus.cargo.container.deployable.WAR;
 import org.codehaus.cargo.container.property.RemotePropertySet;
 import org.codehaus.cargo.container.tomcat.Tomcat5xRemoteContainer;
@@ -49,8 +51,9 @@ import javax.management.MBeanServerConnection;
 import junit.framework.Assert;
 
 public class GenericServer extends AbstractStoppable implements WebApplicationServer {
+  private static final Log                  LOG             = LogFactory.getLog(GenericServer.class);
   private static final String               SERVER          = "server_";
-  private static final boolean              GC_LOGGGING     = true;
+  private static final boolean              GC_LOGGING      = true;
   private static final boolean              ENABLE_DEBUGGER = false;
   private static final ThreadLocal          dsoEnabled      = new ThreadLocal() {
                                                               protected Object initialValue() {
@@ -149,10 +152,19 @@ public class GenericServer extends AbstractStoppable implements WebApplicationSe
         parameters.appendJvmArgs("-XX:MaxPermSize=128m");
         parameters.appendJvmArgs("-Xms128m -Xmx256m");
         break;
+      case AppServerInfo.GLASSFISH:
+        // bumped up because ContainerHibernateTest, ContinuationsTest was failing with glassfish-v1
+        parameters.appendJvmArgs("-XX:MaxPermSize=128m");
+        parameters.appendJvmArgs("-Xms128m -Xmx256m");
+//        parameters.appendJvmArgs("-XX:+PrintGCDetails");
+        break;
     }
 
-    proxyBuilderMap.put(RmiServiceExporter.class, new RMIProxyBuilder());
-    proxyBuilderMap.put(HttpInvokerServiceExporter.class, new HttpInvokerProxyBuilder());
+    if (TestConfigObject.getInstance().isSpringTest()) {
+      LOG.debug("Creating proxy for Spring test...");
+      proxyBuilderMap.put(RmiServiceExporter.class, new RMIProxyBuilder());
+      proxyBuilderMap.put(HttpInvokerServiceExporter.class, new HttpInvokerProxyBuilder());
+    }
   }
 
   private static boolean dsoEnabled() {
@@ -173,7 +185,7 @@ public class GenericServer extends AbstractStoppable implements WebApplicationSe
   }
 
   private void enableDebug(int serverId, final boolean enableDebug) {
-    if (GC_LOGGGING && !Vm.isIBM()) {
+    if (GC_LOGGING && !Vm.isIBM()) {
       parameters.appendJvmArgs("-verbose:gc");
       parameters.appendJvmArgs("-XX:+PrintGCDetails");
       parameters.appendJvmArgs("-XX:+PrintGCTimeStamps");
@@ -195,7 +207,7 @@ public class GenericServer extends AbstractStoppable implements WebApplicationSe
   private class RMIProxyBuilder implements ProxyBuilder {
     public Object createProxy(Class serviceType, String url, Map initialContext) throws Exception {
       String rmiURL = "rmi://localhost:" + rmiRegistryPort + "/" + url;
-      logger.debug("Getting proxy for: " + rmiRegistryPort + " on " + result.serverPort());
+      LOG.debug("Getting proxy for: " + rmiRegistryPort + " on " + result.serverPort());
       Exception e = null;
       for (int i = 5; i > 0; i--) {
         try {
@@ -218,7 +230,7 @@ public class GenericServer extends AbstractStoppable implements WebApplicationSe
 
     public Object createProxy(Class serviceType, String url, Map initialContext) throws Exception {
       String serviceURL = "http://localhost:" + result.serverPort() + "/" + url;
-      logger.debug("Getting proxy for: " + serviceURL);
+      LOG.debug("Getting proxy for: " + serviceURL);
       HttpInvokerProxyFactoryBean prfb = new HttpInvokerProxyFactoryBean();
       prfb.setServiceUrl(serviceURL);
       prfb.setServiceInterface(serviceType);
@@ -314,12 +326,12 @@ public class GenericServer extends AbstractStoppable implements WebApplicationSe
    */
   public WebResponse ping(String url, WebConversation wc) throws MalformedURLException, IOException, SAXException {
     String fullURL = "http://localhost:" + result.serverPort() + url;
-    logger.debug("Getting page: " + fullURL);
+    LOG.debug("Getting page: " + fullURL);
 
     wc.setExceptionsThrownOnErrorStatus(false);
     WebResponse response = wc.getResponse(fullURL);
     Assert.assertEquals("Server error:\n" + response.getText(), 200, response.getResponseCode());
-    logger.debug("Got page: " + fullURL);
+    LOG.debug("Got page: " + fullURL);
     return response;
   }
 
